--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -63,7 +63,7 @@ button:hover {
   text-decoration: none;
 }
 
-.navigation :hover {
+.navigation a:hover {
   text-decoration: underline;
 }
 
@@ -137,10 +137,34 @@ button:hover {
 
 .footer-content {
   grid-area: ft;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+  background-color: #000;
+  color: white;
+  text-align: center;
 }
 
-@media (min-width: 301px) {
+.footer-title {
+  font-size: 40px;
+  margin-top: 0;
 }
+
+.footer-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.footer-list-item {
+  display: inline-block;
+  padding-right: 50px;
+}
+
+li.footer-list-item:last-child {
+  padding-right: 0;
+}
+
 
 @media (min-width: 600px) {
   .main-content {
