feat: add styles to bloogpost

--- a/styles/blogpost.css
+++ b/styles/blogpost.css
@@ -65,14 +65,30 @@ body {
   margin: 0 10px;
 }
 
+/* Recipe */
+
 .content-section {
   grid-area: main;
+}
+
+.content {
+  margin: 0 auto 50px;
+  max-width: 820px;
+}
+
+.content-title {
+  font-size: 40px;
+  text-align: center;
 }
 
 /* Biography */
 
 .biography {
-    display: flex;
+  display: flex;
+  align-items: center;
+  padding: 40px;
+  background-color: beige;
+  margin: 50px 60px;
 }
 
 /* footer styles */
