--- a/styles/blogpost.css
+++ b/styles/blogpost.css
@@ -56,7 +56,7 @@ body {
   display: flex;
   list-style: none;
   justify-content: space-between;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
   max-width: 400px;
 }
@@ -131,7 +131,7 @@ body {
 }
 
 .footer-title {
-  font-size: 40px;
+  font-size: 20px;
   margin-top: 0;
 }
 
@@ -141,8 +141,7 @@ body {
 }
 
 .footer-list-item {
-  display: inline-block;
-  padding-right: 50px;
+  margin-bottom: 15px;
 }
 
 li.footer-list-item:last-child {
@@ -186,6 +185,16 @@ li.footer-list-item:last-child {
 
   .content-list {
     font-size: 22px;
+  }
+
+  .footer-title {
+    font-size: 40px;
+  }
+
+  .footer-list-item {
+    display: inline-block;
+    padding-right: 50px;
+    margin-bottom: 0;
   }
 }
 
