--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -86,6 +86,7 @@ button:hover {
 
 .fullwidth-header {
   height: 100%;
+  /* background image source https://unsplash.com/photos/R3LcfTvcGWY */
   background-image: url("../assets/header-background.jpg");
   background-size: cover;
   background-position: top;
